Fixing tests.